concord_macros/tests/trybuild/fail/codegen/stream_endpoint_execute_sse.stderr
error[E0599]: the method `execute_sse` exists for struct `PendingRequest<'_, StreamEndpointExecuteSseApiCx, EpDownloadHd3386a2ef42e80b9, ReqwestTransport>`, but its trait bounds were not satisfied
  --> tests/trybuild/fail/codegen/stream_endpoint_execute_sse.rs:16:28
   |
 5 | / api! {
 6 | |     client StreamEndpointExecuteSseApi {
 7 | |         base "https://example.com"
...  |
10 | |     GET Download
   | |________________- doesn't satisfy `<_ as Endpoint<StreamEndpointExecuteSseApiCx>>::Response = SseStream<_>`
...
16 |       let _ = api.download().execute_sse().await.unwrap();
   |                              ^^^^^^^^^^^
   |
   = note: the following trait bounds were not satisfied:
           `<EpDownloadHd3386a2ef42e80b9 as concord_core::prelude::Endpoint<StreamEndpointExecuteSseApiCx>>::Response = SseStream<_>`
